HOCS-5161: Remove unneeded resource method (#251)